--- a/Controller/src/main/resources/templates/admin/admin-article-edit.html
+++ b/Controller/src/main/resources/templates/admin/admin-article-edit.html
@@ -111,14 +111,13 @@
 
                     <div class="form-group">
                         <label for="comment">Title:</label>
-                        <!-- <input type="text" style="width: 64%;" name="title" id=""> -->
+
                         <div style="border: 1px solid rgb(104, 96, 96); width:  71%; border-radius: 9px;">
                             <input autocomplete="off" type="text"
                                 style="padding: 5px; width: 100%; border: none; border-radius: 9px;" name="title"
                                 id="search">
                         </div>
-                        <!-- <textarea id="mytitle" class="form-control  " style="resize: none; box-sizing: border-box;
-                         width: 100% !important;"></textarea> -->
+
                     </div>
 
                     <form style="display: none;" method="POST" id="thumnailFrm" enctype="multipart/form-data">
@@ -141,141 +140,16 @@
                     </div>
 
                     <div style="overflow-y: scroll; height:400px; padding-right: 10px;">
-                        <!-- <div class="form-group"> -->
-                        <!-- <textarea id="mytitle" class="form-control  " style="resize: none; box-sizing: border-box;
-                     width: 100% !important;"></textarea> -->
-                        <!-- </div> -->
+
                         <div class="container">
                             <div class="row text-center">
-                                <label style="margin: 6px; margin-left: 0;" for="primary1" class="btn btn-primary">math
-                                    <input type="checkbox" id="primary1" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary2"
-                                    class="btn btn-primary">cooking <input type="checkbox" id="primary2"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary3"
-                                    class="btn btn-primary">Programming <input type="checkbox" id="primary3"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary4" class="btn btn-primary">Khmer
-                                    <input type="checkbox" id="primary4" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary5"
-                                    class="btn btn-primary">English <input type="checkbox" id="primary5"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary6" class="btn btn-primary">Bank
-                                    <input type="checkbox" id="primary6" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary7"
-                                    class="btn btn-primary">Facebook <input type="checkbox" id="primary7"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary8"
-                                    class="btn btn-primary">Computer <input type="checkbox" id="primary8"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary9"
-                                    class="btn btn-primary">Technology <input type="checkbox" id="primary9"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary10"
-                                    class="btn btn-primary">Health <input type="checkbox" id="primary10"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary11"
-                                    class="btn btn-primary">Primary <input type="checkbox" id="primary11"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary4" class="btn btn-primary">Khmer
-                                    <input type="checkbox" id="primary4" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary5"
-                                    class="btn btn-primary">English <input type="checkbox" id="primary5"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary6" class="btn btn-primary">Bank
-                                    <input type="checkbox" id="primary6" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary7"
-                                    class="btn btn-primary">Facebook <input type="checkbox" id="primary7"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary8"
-                                    class="btn btn-primary">Computer <input type="checkbox" id="primary8"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary9"
-                                    class="btn btn-primary">Technology <input type="checkbox" id="primary9"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary10"
-                                    class="btn btn-primary">Health <input type="checkbox" id="primary10"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary11"
-                                    class="btn btn-primary">Primary <input type="checkbox" id="primary11"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary4" class="btn btn-primary">Khmer
-                                    <input type="checkbox" id="primary4" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary5"
-                                    class="btn btn-primary">English <input type="checkbox" id="primary5"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary6" class="btn btn-primary">Bank
-                                    <input type="checkbox" id="primary6" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary7"
-                                    class="btn btn-primary">Facebook <input type="checkbox" id="primary7"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary8"
-                                    class="btn btn-primary">Computer <input type="checkbox" id="primary8"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary9"
-                                    class="btn btn-primary">Technology <input type="checkbox" id="primary9"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary10"
-                                    class="btn btn-primary">Health <input type="checkbox" id="primary10"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary11"
-                                    class="btn btn-primary">Primary <input type="checkbox" id="primary11"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-
+                                <th:block th:each="category : ${categories}">
+                                    <label style="margin: 6px; margin-left: 0;" th:for="${category.getId()}"
+                                        class="btn btn-primary"> <span th:text="${category.getName()}"></span>
+                                        <input th:value="${category.getId()}" type="checkbox" th:id="${category.getId()}" class="badgebox"><span
+                                            style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
+                                            class="badge">&check;</span></label>
+                                </th:block>
                             </div>
                         </div>
                     </div>
@@ -288,10 +162,12 @@
                         value="Update" class="btn btn-primary"></div>
             </div>
 
-            <!-- <script src="https://cdn.ckeditor.com/ckeditor5/16.0.0/classic/ckeditor.js"></script> -->
+
 
             <script src="/node_module/jquery/dist/jquery.min.js"></script>
             <script>
+
+
                 var thImg = "";
 
                 CKEDITOR.replace('editor1', {
@@ -300,7 +176,7 @@
                 });
 
                 window.onload =
-                    function () { // code supposed to run once DOM is loaded alert("onload event is fired"); };
+                    function () {
                         CKEDITOR.instances.editor1.insertHtml("<p>adsfasdfadf</p>");
                     }
 
@@ -316,9 +192,9 @@
                             var title = data["title"];
                             CKEDITOR.instances.editor1.insertHtml(body);
                             $("#search").val(title);
-                            $("#thumnail").attr("src", "/img/" + data["thumbnail"]);
-                            thImg=data["thumbnail"];
-                            // alert(body)
+                            $("#thumnail").attr("src",  data["thumbnail"]);
+                            thImg = data["thumbnail"];
+
                         },
                         error: function (data) {
                             console.log("error");
@@ -326,8 +202,6 @@
                         }
                     });
                 })
-
-                // alert("") // true
 
 
                 CKEDITOR.fire('load');
@@ -340,14 +214,13 @@
 
                 function getData() {
                     var value = CKEDITOR.instances["editor1"].getData();
-                    // alert(value)
-
+ 
                     var dataObj = {
                         "body": value,
-                        "id": 7,
+                        "id": [[${id}]],
                         "status": "1",
                         "thumbnail": thImg,
-                        "timestamp": 1,
+                        "timestamp":null,
                         "title": $("#search").val(),
                         "writer": "string",
                         "category": {
@@ -361,6 +234,9 @@
                         contentType: "application/json",
                         success: function (respone) {
                             console.log(respone)
+                        },
+                        error: function(er){
+                           console.log(er)
                         },
                         dataType: 'json'
                     });
@@ -389,7 +265,7 @@
                                 `<span><img width='200px' src='http://localhost:8080/img/${srcimg}'><span>`;
 
                             CKEDITOR.instances.editor1.insertHtml(im);
-                            //  editor.setData(im);
+
                         },
                         error: function (data) {
                             console.log("error");
@@ -399,30 +275,30 @@
                 });
 
 
-                $("#myTh").change(function () {
+                // $("#myTh").change(function () {
 
-                });
-                $("#thumnailFrm").submit(function (e) {
-                    event.preventDefault();
+                // });
+                // $("#thumnailFrm").submit(function (e) {
+                //     event.preventDefault();
 
-                    var fd = new FormData();
-                    fd.append('file', myTh.files[0]);
-                    $.ajax({
-                        type: 'POST',
-                        url: 'http://localhost:8080/upload',
-                        data: fd,
-                        contentType: false,
-                        processData: false,
-                        success: function (data) {
-                            var srcimg = data["Data"]
-                            thImg = srcimg;
-                        },
-                        error: function (data) {
-                            console.log("error");
-                            console.log(data);
-                        }
-                    });
-                });
+                //     var fd = new FormData();
+                //     fd.append('file', myTh.files[0]);
+                //     $.ajax({
+                //         type: 'POST',
+                //         url: 'http://localhost:8080/upload',
+                //         data: fd,
+                //         contentType: false,
+                //         processData: false,
+                //         success: function (data) {
+                //             var srcimg = data["Data"]
+                //             thImg = srcimg;
+                //         },
+                //         error: function (data) {
+                //             console.log("error");
+                //             console.log(data);
+                //         }
+                //     });
+                // });
 
                 function chooseThum() {
                     $("#myTh").click();
