--- a/Controller/src/main/resources/templates/admin/admin-article-insert.html
+++ b/Controller/src/main/resources/templates/admin/admin-article-insert.html
@@ -147,135 +147,15 @@
                         <!-- </div> -->
                         <div class="container">
                             <div class="row text-center">
-                                <label style="margin: 6px; margin-left: 0;" for="primary1" class="btn btn-primary">math
-                                    <input type="checkbox" id="primary1" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary2"
-                                    class="btn btn-primary">cooking <input type="checkbox" id="primary2"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary3"
-                                    class="btn btn-primary">Programming <input type="checkbox" id="primary3"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary4" class="btn btn-primary">Khmer
-                                    <input type="checkbox" id="primary4" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary5"
-                                    class="btn btn-primary">English <input type="checkbox" id="primary5"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary6" class="btn btn-primary">Bank
-                                    <input type="checkbox" id="primary6" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary7"
-                                    class="btn btn-primary">Facebook <input type="checkbox" id="primary7"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary8"
-                                    class="btn btn-primary">Computer <input type="checkbox" id="primary8"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary9"
-                                    class="btn btn-primary">Technology <input type="checkbox" id="primary9"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary10"
-                                    class="btn btn-primary">Health <input type="checkbox" id="primary10"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary11"
-                                    class="btn btn-primary">Primary <input type="checkbox" id="primary11"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary4" class="btn btn-primary">Khmer
-                                    <input type="checkbox" id="primary4" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary5"
-                                    class="btn btn-primary">English <input type="checkbox" id="primary5"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary6" class="btn btn-primary">Bank
-                                    <input type="checkbox" id="primary6" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary7"
-                                    class="btn btn-primary">Facebook <input type="checkbox" id="primary7"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary8"
-                                    class="btn btn-primary">Computer <input type="checkbox" id="primary8"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary9"
-                                    class="btn btn-primary">Technology <input type="checkbox" id="primary9"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary10"
-                                    class="btn btn-primary">Health <input type="checkbox" id="primary10"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary11"
-                                    class="btn btn-primary">Primary <input type="checkbox" id="primary11"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary4" class="btn btn-primary">Khmer
-                                    <input type="checkbox" id="primary4" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary5"
-                                    class="btn btn-primary">English <input type="checkbox" id="primary5"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary6" class="btn btn-primary">Bank
-                                    <input type="checkbox" id="primary6" class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary7"
-                                    class="btn btn-primary">Facebook <input type="checkbox" id="primary7"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary8"
-                                    class="btn btn-primary">Computer <input type="checkbox" id="primary8"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary9"
-                                    class="btn btn-primary">Technology <input type="checkbox" id="primary9"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary10"
-                                    class="btn btn-primary">Health <input type="checkbox" id="primary10"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-                                <label style="margin: 6px; margin-left: 0;" for="primary11"
-                                    class="btn btn-primary">Primary <input type="checkbox" id="primary11"
-                                        class="badgebox"><span
-                                        style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
-                                        class="badge">&check;</span></label>
-
+                                
+                                    <th:block th:each="category : ${categories}">
+                                        <label style="margin: 6px; margin-left: 0;" th:for="${category.getId()}"
+                                            class="btn btn-primary"> <span th:text="${category.getName()}"></span>
+                                            <input th:value="${category.getId()}" type="checkbox" th:id="${category.getId()}" class="badgebox"><span
+                                                style="color: blue;background-color: rgb(255, 255, 255); border-radius: 10px;"
+                                                class="badge">&check;</span></label>
+                                    </th:block>
+            
                             </div>
                         </div>
                     </div>
@@ -305,15 +185,18 @@
                 function getData() {
                     var value = CKEDITOR.instances["editor1"].getData();
                     // alert(value)
-
+                    if(value==""){
+                    return;
+                    }
+                    var currentDate = new Date();
                     var dataObj = {
                         "body": value,
-                         
+                          
                         "status": "1",
-                        "thumbnail": thImg,
-                        "timestamp": 1,
+                        "thumbnail": "/img/"+thImg,
+                        "timestamp": null,
                         "title": $("#search").val(),
-                        "writer": "string",
+                        "writer": "Pengsea",
                         "category": {
                             "id": 1 //static
                         }
@@ -325,6 +208,9 @@
                         contentType: "application/json",
                         success: function (respone) {
                             console.log(respone)
+                        },
+                        error: function (respone){
+                            console.log(respone);
                         },
                         dataType: 'json'
                     });
