--- a/Controller/src/main/resources/templates/client-home.html
+++ b/Controller/src/main/resources/templates/client-home.html
@@ -308,5 +308,110 @@
             <!-- container-fluid -->
         </div>
     </div>
+    <div layout:fragment="content-js">
+        <script>
+        var p=1;
+        $(document).ready(function(){
+            $.ajax({
+
+                url: "/conCard",
+                method: 'GET',
+                success: function(obj){
+                     
+                    $("#conn").prepend(obj);
+                },
+                error: function(err){
+                    console.log(err);
+                }
+            });
+       
+       
+            $.ajax({
+                url: "/conCard/"+p,
+                method: 'GET',
+                success: function(obj){
+                    console.log(obj);
+                    $("#cardCon").append(obj);
+                    p++;
+                    $.ajax({
+                    url: "/conCard/"+p,
+                    method: 'GET',
+                    success: function(obj){
+                    console.log(obj);
+                    $("#cardCon").append(obj);
+                    p++;
+                },
+                error: function(err){
+                    console.log(err);
+                }
+                });
+                },
+                error: function(err){
+                    console.log(err);
+                }
+            });
+        });
+
+        var _throttleTimer = null;
+        var _throttleDelay = 100;
+        var $window = $(window);
+        var $document = $(document);
+
+        $document.ready(function () {
+
+            $window
+                .off('scroll', ScrollHandler)
+                .on('scroll', ScrollHandler);
+
+        });
+
+        function ScrollHandler(e) {
+            //throttle event:
+            clearTimeout(_throttleTimer);
+            _throttleTimer = setTimeout(function () {
+                console.log('scroll');
+
+            //do work
+            if ($window.scrollTop() + $window.height() > $document.height() - 1000) {
+                //  alert(p)
+            
+                 $(document).ready(function(){
+            $.ajax({
+                url: "/conCard/"+p,
+                method: 'GET',
+                success: function(obj){
+                    console.log(obj);
+                    $("#cardCon").append(obj);
+                    p++;
+                    $.ajax({
+                url: "/conCard/"+p,
+                method: 'GET',
+                success: function(obj){
+                    console.log(obj);
+                    $("#cardCon").append(obj);
+                    p++;
+                },
+                error: function(err){
+                    console.log(err);
+                }
+            });
+                },
+                error: function(err){
+                    console.log(err);
+                }
+            });
+        });
+            
+            } 
+            }, _throttleDelay);
+        }
+        
+//         $(document).ready(function() {
+//     var myContent = '<p><code>var _throttleTimer = null; var _throttleDelay = 100; var $window = $(window); var $document = $(document); $document.ready(function () { $window .off(&#39;scroll&#39;, ScrollHandler) .on(&#39;scroll&#39;, ScrollHandler); }); function ScrollHandler(e) { //throttle event: clearTimeout(_throttleTimer); _throttleTimer = setTimeout(function () { console.log(&#39;scroll&#39;); //do work if ($window.scrollTop() + $window.height() &gt; $document.height() - 100) { alert(&quot;near bottom!&quot;); } }, _throttleDelay); }</code></p>';
+//     alert(myContent.replace(/(<([^>]+)>)/ig,""));
+// });
+             
+</script>
+    </div>
 </body>
 </html>
